@@ -1,5 +1,16 @@
-FROM openjdk:8
+FROM gradle:6.7.1-jdk8 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
+
+FROM openjdk:8-jre-slim
 EXPOSE 8080
-RUN mkdir -p /app/
-ADD build/libs/recicla-1.jar /app/recicla-1.jar
-ENTRYPOINT ["java", "-jar", "/app/recicla-1.jar"]
+RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+
+
+
+
+
